--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@agauravdev/matcha-ui": "^1.0.6",
+    "@agauravdev/matcha-ui": "^1.0.9",
+    "history": "^5.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "react-router-dom": "^6.0.0-beta.2",
     "react-scripts": "4.0.3",
     "react-spinners": "^0.11.0"
   },
@@ -14,6 +16,9 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/styled-components": "^5.1.13",
+    "devmoji": "^2.3.0",
+    "prettier": "^2.3.2",
     "typescript": "^4.1.2"
   },
   "scripts": {
